fix(ui): Dracula theme > improve contrast + visibility of null values in code mirror editor

--- a/packages/ui/src/styles/main.css
+++ b/packages/ui/src/styles/main.css
@@ -254,7 +254,7 @@ html.theme-dracula {
     --github-button-icon-fill-color: white;
     --cm-string: #f1fa8c;
     --cm-boolean: #ffb86c;
-    --cm-null: #6272a4;
+    --cm-null: #8ca6f9;
     --cm-number: #bd93f9;
     --cm-comment: #6272a4;
     --cm-keyword: #ff79c6;
